# libsocket

./: .gitignore  CMakeLists.txt  README.md  socket.cpp  socket.h
test/: client.cpp  server.cpp
